MessageAttachment: fix word wrap

--- a/src/components/chat/Chat.scss
+++ b/src/components/chat/Chat.scss
@@ -853,6 +853,7 @@
 
           .file-title {
             width: 90%;
+            word-break: break-word;
           }
 
           span {
